Renamed the rules to ToS and rephrasing ToS

--- a/tos.html
+++ b/tos.html
@@ -1,7 +1,7 @@
 ---
-title: Community Rules
+title: Terms of Service
 layout: default-none
-permalink: /community/rules
+permalink: /tos
 ---
 
     <style>
@@ -12,9 +12,8 @@ permalink: /community/rules
 
 <div id="top"></div>
 <div class="animsition">
-    <h1 class="text-center display-5 mt-3">Alee Productions Community Rules</h1>
-    <p class="text-center lead">Rules have been set in stone so we make sure that you can have a great time here.</p>
-    <p class="text-center lead">If you think that reading rules are hard it’s actually not just take some time.</p>
+    <h1 class="text-center display-5 mt-3">Alee Productions Terms of Service</h1>
+    <p class="text-center lead">These terms and service have been set in stone so we make sure that you can have a great time using our services.</p>
 <div class="container rules">
 <div id="tiers">
 <h1>Tiers</h1>
@@ -28,11 +27,11 @@ permalink: /community/rules
 <p>If these are broken, then an unofficial warning will occur. If these actions continue, an official warning will occur then excessive punishment will happen if continued once more.</p>
     <ul>
         <li>Use common sense. (This isn’t an against rule but you must use your common knowledge.)</li>
-        <li>No spamming (Mention and @everyone spams in discord will result in an official warning.)</li>
+        <li>No spamming (Any spam will result in an official warning.)</li>
         <li>No any advertisements/giveaways at any channels. Unless for a specific purpose.</li>
         <li>Respect others.</li>
         <li>No backseat moderating (enforcing the rules to other users)</li>
-        <li>Refrain asking for staff, because this just lowers your chance to 0.</li>
+        <li>Refrain asking for staff that just lowers your chance to never getting it.</li>
     </ul>
 </div>
     <div id="excessive-tier">
@@ -44,7 +43,7 @@ permalink: /community/rules
             <li>Do not argue or threaten the staff.</li>
             <li>Blackmailing members is also not tolerated here.</li>
             <li>No NSFW content.</li>
-            <li>Raids will not be tolerated in this community. (Doing this wastes our time and yours too)</li>
+            <li>No raids to be started when using our services.</li>
             <li>No alts are to be on this community.</li>
             <li>Threatening anyone will also not be tolerated. (i.e. DDoS, trying to find you and etc)</li>
             <li>Any malicious content will not be tolerated. (i.e. Viruses, Malware, Adware and etc)</li>
@@ -52,7 +51,8 @@ permalink: /community/rules
         </ul>
     </div>
     <div id="discord-policy">
-        <h1>Alee Productions Discord Policies</h1>
+        <h1>Alee Productions Policies</h1>
+        <h2>Discord Only</h2>
         <div id="discord-nickname">
             <h1>Nickname Policy</h1>
             <p>We enforce this nickname policy to keep a clean, friendly community.</p>
@@ -68,12 +68,6 @@ permalink: /community/rules
                 <li>Censoring your nickname/username</li>
                 <li>Ignoring the nickname change from AstralMod</li>
             </ul>
-        </div>
-        <div id="discord-ageing">
-            <h1>Ageing Policy</h1>
-            <p>You must be at least 13 years old to be in this server due to the COPPA regulations…</p>
-            <p>If you don’t accept this, you may leave the server and discord.</p>
-            <p>An investigation or/and ban may happen if found guilty.</p>
         </div>
         <div id="logging-policy">
             <h1>Logging/Privacy/Tracking Policy</h1>
@@ -116,6 +110,12 @@ permalink: /community/rules
             </div>
         </div>
         <!-- Modal -->
+        <div id="coppa-policy">
+            <h1>COPPA Policy</h1>
+            <p>You must be at least 13 years old to be in this server due to the COPPA regulations…</p>
+            <p>If you don’t accept this, you have to leave our services.</p>
+            <p>An investigation or/and ban may happen if found guilty.</p>
+        </div>
     </div>
     <div id="FAQ">
         <h1>Frequent Asked Questions</h1>
