--- a/tos.html
+++ b/tos.html
@@ -50,9 +50,15 @@ permalink: /tos
             <li>Selfbots is not allowed. (Discord prohibits selfbots in their ToS)</li>
         </ul>
     </div>
-    <div id="discord-policy">
+    <div id="policy">
         <h1>Alee Productions Policies</h1>
-        <h2>Discord Only</h2>
+        <div id="coppa-policy">
+            <h1>COPPA Policy</h1>
+            <p>You must be at least 13 years old to be in this server due to the COPPA regulations…</p>
+            <p>If you don’t accept this, you have to leave our services.</p>
+            <p>An investigation or/and ban may happen if found guilty.</p>
+        </div>
+        <h2>Discord Only Policies</h2>
         <div id="discord-nickname">
             <h1>Nickname Policy</h1>
             <p>We enforce this nickname policy to keep a clean, friendly community.</p>
@@ -110,12 +116,6 @@ permalink: /tos
             </div>
         </div>
         <!-- Modal -->
-        <div id="coppa-policy">
-            <h1>COPPA Policy</h1>
-            <p>You must be at least 13 years old to be in this server due to the COPPA regulations…</p>
-            <p>If you don’t accept this, you have to leave our services.</p>
-            <p>An investigation or/and ban may happen if found guilty.</p>
-        </div>
     </div>
     <div id="FAQ">
         <h1>Frequent Asked Questions</h1>
