More changes to ToS

--- a/tos.html
+++ b/tos.html
@@ -39,12 +39,12 @@ permalink: /tos
         <p>This can result in an official warning, jail/mute or possible ban/kick it depends on how severe it is.</p>
         <ul>
             <li>No excessive swearing (Swearing is allowed but cursing that contains racial slur and etc will result in immediate severe punishment.)</li>
-            <li>Any accusations will never be tolerated here there will be an investigation from the staff team if it occurs and false accusation may lead a 24 hour jail time or possibly getting banned.</li>
+            <li>Any accusations will never be tolerated here there will be an investigation from the staff team if it occurs and false accusation may lead a 24 hour jail time or possibly getting terminated from using our services.</li>
             <li>Do not argue or threaten the staff.</li>
             <li>Blackmailing members is also not tolerated here.</li>
             <li>No NSFW content.</li>
             <li>No raids to be started when using our services.</li>
-            <li>No alts are to be on this community.</li>
+            <li>No alts are to be on any of our services.</li>
             <li>Threatening anyone will also not be tolerated. (i.e. DDoS, trying to find you and etc)</li>
             <li>Any malicious content will not be tolerated. (i.e. Viruses, Malware, Adware and etc)</li>
             <li>Selfbots is not allowed. (Discord prohibits selfbots in their ToS)</li>
