More changes to ToS

--- a/tos.html
+++ b/tos.html
@@ -5,7 +5,7 @@ permalink: /tos
 ---
 
     <style>
-        .rules {
+        .tos {
             font-size: 15pt;
         }
     </style>
@@ -14,7 +14,7 @@ permalink: /tos
 <div class="animsition">
     <h1 class="text-center display-5 mt-3">Alee Productions Terms of Service</h1>
     <p class="text-center lead">These terms and service have been set in stone so we make sure that you can have a great time using our services.</p>
-<div class="container rules">
+<div class="container tos">
 <div id="tiers">
 <h1>Tiers</h1>
     <ul class="none">
@@ -130,8 +130,9 @@ permalink: /tos
     <div id="conclusion">
         <p>If a rule is broken, no need to panic, it's just a heads up on what’s coming if you were to break another rule and if you got mistakenly warned please contact one of the staff immediately.</p>
         <p>If there's staff abusing their powers please report them to Alee immediately.</p>
-        <p>Thanks for reading the rules!</p>
-        <p>From the Alee Productions Community Team :)</p>
+        <p>Thanks for reading the ToS!</p>
+        <p>- Alee Productions Community Team</p>
+        <p>Last updated on November 25th 2019</p>
     </div>
     <a href="#top" class="green-text">Back to top</a>
 </div>
