Changed navbar, footer, tos, about

--- a/tos.html
+++ b/tos.html
@@ -76,14 +76,13 @@ permalink: /tos
             </ul>
         </div>
         <div id="logging-policy">
-            <h1>Logging/Privacy/Tracking Policy</h1>
-            <p>Our bots (AstralMod, Auttaja, and Manager) log the following things, and store them in their databases:</p>
+            <h1>Logging Policy</h1>
+            <p>Our bots log the following things, and store them in their databases:</p>
             <ul>
                 <li>Deleted Messages</li>
                 <li>Edited Messages</li>
                 <li>Your ID</li>
                 <li>You joining and leaving</li>
-                <li>You sending messages (Manager Bot Only)</li>
             </ul>
             <p>If you don’t agree with the policies and wanting to opt out, you may leave the server.</p>
         </div>
@@ -91,11 +90,11 @@ permalink: /tos
     <p>We also highly recommend you to read Discord’s <a class="text-green" href="https://discordapp.com/terms">ToS</a> and <a class="text-green" href="https://discordapp.com/guidelines">Community Guidelines</a>.</p>
     <div id="modal">
         <!-- Modal -->
-        <div class="modal fade down" id="exampleModalPreview" tabindex="-1" role="dialog" aria-labelledby="exampleModalPreviewLabel" aria-hidden="true">
+        <div class="modal fade down" id="instructionsModal" tabindex="-1" role="dialog" aria-labelledby="instructions-label" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content dark">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalPreviewLabel">Instructions</h5>
+                        <h5 class="modal-title" id="instructions-label">Instructions</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -122,7 +121,7 @@ permalink: /tos
         <p>These are the frequently asked questions that you might ask the staffs.</p>
         <ul class="none">
             <li>Q: Can I be staff?</li>
-            <li>A: No, you can't ask for staff but you want to know how to get it, then here are the <a class="green-text" id="modalActivate" type="button" data-toggle="modal" data-target="#exampleModalPreview">instructions</a>.</li>
+            <li>A: No, you can't ask for staff but you want to know how to get it, then here are the <a class="green-text" id="modalActivate" data-toggle="modal" data-target="#instructionsModal">instructions</a>.</li>
             <li>Q: I was banned for no reason! I hate the staff…</li>
             <li>A: Well… if you were banned for no reason you can ask our staff team and they will tell you why you were banned.</li>
         </ul>
