More ToS changes

--- a/tos.html
+++ b/tos.html
@@ -36,10 +36,10 @@ permalink: /tos
 </div>
     <div id="excessive-tier">
         <h1>Excessive Tier</h1>
-        <p>This can result in an official warning, jail/mute or possible ban/kick it depends on how severe it is.</p>
+        <p>This can result in an official warning or a termination from using our services.</p>
         <ul>
             <li>No excessive swearing (Swearing is allowed but cursing that contains racial slur and etc will result in immediate severe punishment.)</li>
-            <li>Any accusations will never be tolerated here there will be an investigation from the staff team if it occurs and false accusation may lead a 24 hour jail time or possibly getting terminated from using our services.</li>
+            <li>Any accusations will never be tolerated here there will be an investigation from the staff team if it occurs and false accusation may lead a temporary termination or possibly permanently terminated from using our services.</li>
             <li>Do not argue or threaten the staff.</li>
             <li>Blackmailing members is also not tolerated here.</li>
             <li>No NSFW content.</li>
@@ -47,14 +47,13 @@ permalink: /tos
             <li>No alts are to be on any of our services.</li>
             <li>Threatening anyone will also not be tolerated. (i.e. DDoS, trying to find you and etc)</li>
             <li>Any malicious content will not be tolerated. (i.e. Viruses, Malware, Adware and etc)</li>
-            <li>Selfbots is not allowed. (Discord prohibits selfbots in their ToS)</li>
         </ul>
     </div>
     <div id="policy">
         <h1>Alee Productions Policies</h1>
         <div id="coppa-policy">
             <h1>COPPA Policy</h1>
-            <p>You must be at least 13 years old to be in this server due to the COPPA regulations…</p>
+            <p>You must be at least 13 years old to be in this server due to the <a class="green-text" href="https://en.wikipedia.org/wiki/Children's_Online_Privacy_Protection_Act">COPPA</a> regulations…</p>
             <p>If you don’t accept this, you have to leave our services.</p>
             <p>An investigation or/and ban may happen if found guilty.</p>
         </div>
@@ -84,7 +83,7 @@ permalink: /tos
                 <li>Your ID</li>
                 <li>You joining and leaving</li>
             </ul>
-            <p>If you don’t agree with the policies and wanting to opt out, you may leave the server.</p>
+            <p>If you don’t agree with the policies and wanting to opt out, you may not use our services.</p>
         </div>
     </div>
     <p>We also highly recommend you to read Discord’s <a class="text-green" href="https://discordapp.com/terms">ToS</a> and <a class="text-green" href="https://discordapp.com/guidelines">Community Guidelines</a>.</p>
@@ -131,7 +130,7 @@ permalink: /tos
         <p>If there's staff abusing their powers please report them to Alee immediately.</p>
         <p>Thanks for reading the ToS!</p>
         <p>- Alee Productions Community Team</p>
-        <p>Last updated on November 25th 2019</p>
+        <p>Last updated on November 26th 2019</p>
     </div>
     <a href="#top" class="green-text">Back to top</a>
 </div>
