--- a/tos.html
+++ b/tos.html
@@ -13,7 +13,7 @@ permalink: /tos
 <div id="top"></div>
 <div class="animsition">
     <h1 class="text-center display-5 mt-3">Alee Productions Terms of Service</h1>
-    <p class="text-center lead">These terms and service have been set in stone so we make sure that you can have a great time using our services.</p>
+    <p class="text-center lead">These terms and service have been set in place so we make sure that you can have a great time using our services.</p>
 <div class="container tos">
 <div id="tiers">
 <h1>Tiers</h1>
