--- a/tos.html
+++ b/tos.html
@@ -9,7 +9,7 @@ permalink: /tos
             font-size: 15pt;
         }
     </style>
-
+<!-- TODO: Add legal stuff -->
 <div id="top"></div>
 <div class="animsition">
     <h1 class="text-center display-5 mt-3">Alee Productions Terms of Service</h1>
