now using gitea api

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@ permalink: /projects
                 }
             };
         }
-        xhttp.open("GET", "https://api.github.com/users/aleeproductions/repos", true);
+        xhttp.open("GET", "https://git.alee-productions.xyz/api/v1/users/aleeproductions/repos", true);
         xhttp.send();
     </script>
     <script type="text/javascript" data-main="/js/yt-list-videos.js" src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
